--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,9 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+
+# removed default theme
+# theme: minima
 plugins:
   - jekyll-feed
 
