few template changes

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://version010.com" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: tonypark25
 github_username:  parktony
+show_excerpts: true
+excerpt_separator: "<!--more-->"
 
 # Build settings
 
