--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: v010
 author: Tony Park
 description: >- # this means to ignore newlines until "baseurl:"
-  A random collection of thoughts and experiments.
+  Collection of thoughts and experiments mostly on data and tech.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://version010.com" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: tonypark25
